2001-11-13  Akim Demaille  <akim@epita.fr>

	Start a new layout for Autotest: `testsuite' creates
	`testsuite.dir' in which the at-check-line etc. files are to be
	found, and `testsuite.dir/003' where the test group 3 is run.

	* lib/autotest/general.m4 (AT_INIT): at_tests_dir,
	at_check_line_file, at_format, at_test_normalized, at_group_dir
	are new variables.
	Create the directories.
	Use absolute paths for at- files.
	(AT_CHECK): Adjust.

2001-11-11  Michael Matz  <matz@kde.org>

	* m4sugar.m4 (_m4_foreach): Make it linear instead quadratic.
	(m4_car2): New.
	(m4_car): Properly quote arguments.

2001-11-13  Akim Demaille  <akim@epita.fr>

	* tests/aclocal.m4 (AC_STATE_SAVE): s/LIBOBJS/LIB@&t@OBJS/ to cope
	with stricter rules on LIBOBJS.

2001-11-12  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/c.m4 (AC_C_PROTOTYPES): Define __PROTOTYPES too.
	* doc/autoconf.texi (C Compiler): AC_C_PROTOTYPES now defines
	__PROTOTYPES too.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_FUNC_GETMNTENT): Use AC_CHECK_FUNCS.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/c.m4, lib/autoconf/fortran.m4,
	* lib/autoconf/functions.m4, lib/autoconf/general.m4,
	* lib/autoconf/headers.m4, lib/autoconf/libs.m4,
	* lib/autoconf/programs.m4, lib/autoconf/specific.m4,
	* lib/autoconf/types.m4: When invoking AC_DEFINE and friends,
	specify to what the macro should be defined (typically to 1).

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_FUNC_STRTOD): AC_SUBST POW_LIB.
	From Jim Meyering.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/programs.m4 (_AC_PROG_LEX_YYTEXT_DECL): Use
	AC_TRY_EVAL to run $LEX, not AC_TRY_COMMAND.  This validates the
	definition used by Automake where LEX is +/- "${missing} lex" and
	`missing' itself contains variables.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Push KILL at the end.